css/main.css
/* ... */
.contact .card-container .card i {
  font-size: 3.5rem;
  color: #3b82f6;
  margin-bottom: 1rem;
  transition: 0.4s;
}

.contact .card-container .card i:hover {
  transform: translateY(-20%);
}

.contact .card-container .card > * {
  margin: 0.5rem;
}

.contact form {
  max-width: 600px;
  margin: 0 auto;
  border-radius: 3px;
  box-shadow: 0 0.15rem 0.6rem rgba(43, 52, 56, 0.15);
  padding: 2rem;
}

.contact form h2 {
  text-align: center;
  margin: 1.5rem 0;
}

.contact form .form-group input {
  margin: 0.75rem 0;
  width: 100%;
  border-radius: 3px;
  border: 1px solid black;
  padding: 0.75rem;
  font-size: 1rem;
}

.contact form .form-group input:focus {
  outline: none;
}

.contact form .form-group textarea {
  width: 100%;
  border-radius: 3px;
  margin: 0.75rem 0;
  border: 1px solid black;
  padding: 0.75rem;
  font-size: 1rem;
  resize: vertical;
}

.contact form .form-group textarea:focus {
  outline: none;
}

.contact form #status {
  width: 100%;
  text-align: center;
  margin: 0 auto;
  border-radius: 3px;
  color: #00b700;
}

.contact form #status.success {
  color: #00b700;
  animation: status 4s ease forwards;
}

.contact form #status.error {
  color: red;
  animation: status 4s ease forwards;
}

@keyframes status {
  0% {
    opacity: 1;
    pointer-events: all;
  }
  90% {
    opacity: 1;
    pointer-events: all;
  }
  100% {
    opacity: 0;
    pointer-events: none;
  }
}

.footer {
  background: #181a1b;
  padding: 1.5rem 0;
  color: white;
  position: relative;
}

.footer canvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

.footer .footer-flex {
  display: flex;
  justify-content: space-between;
}

.footer .footer-flex #logo-footer {
  width: 200px;
}

.footer .footer-flex .top-scroll-button {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 35px;
  height: 35px;
  text-align: center;
  border: 3px solid white;
  border-radius: 50%;
  transition: 0.3s;
}

.footer .footer-flex .top-scroll-button:hover {
  color: #3b82f6;
  border: 3px solid #3b82f6;
}

.footer .footer-flex .footer-icon-links a {
  margin-left: 2rem;
  transition: 0.3s;
}

.footer .footer-flex .footer-icon-links a:hover {
  color: #3b82f6;
}

.footer .footer-flex .footer-icon-links a i {
  transition: 0.3s;
}

.footer .footer-flex .footer-icon-links a i:hover {
  transform: translateY(-20%);
}

@media screen and (max-width: 500px) {
  .footer .footer-flex {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .footer .footer-flex .top-scroll-button {
    margin-top: 2rem;
  }
  .footer .footer-flex .footer-icon-links {
    margin-top: 2rem;
  }
  .footer .footer-flex .footer-icon-links a {
    margin: 0 1rem;
  }
}

.photography {
  background-color: #ffffff; /* White background */
  padding: 50px 20px;
  text-align: center;
}

.photography h2 {
  font-size: 2rem;
  color: #333333;
  margin-bottom: 20px;
}

.photo-category {
  margin-bottom: 40px;
  padding: 20px;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  background-color: #f9f9f9;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.photo-category h3 {
  font-size: 1.5rem;
  color: #555555;
  margin-bottom: 15px;
}

.photo-preview {
  display: flex;
  justify-content: center;
  gap: 20px;
  margin-bottom: 15px;
}

.photo-preview img {
  width: 150px;
  height: auto;
  border-radius: 10px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.btn-blue:hover {
  background-color: #0056b3;
}

.gallery-grid {
  display: flex;
  gap: 10px; /* Space between images */
  justify-content: center; /* Center images horizontally */
  flex-wrap: nowrap; /* Prevent wrapping */
}

.gallery-grid img {
  max-width: 50%; /* Make sure images don't exceed 50% of the container width */
  height: auto; /* Maintain aspect ratio */
  border-radius: 10px;
}

@media (max-width: 768px) {
  header {
    position: static;
    height: auto;
    padding: 10px;
  }
}

